build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit-mock-objects/tests/Generator/return_type_declarations_nullable.phpt.warn
WARNING:12:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	}
